--- a/src/gardener/Views/MapPage.xaml
+++ b/src/gardener/Views/MapPage.xaml
@@ -5,33 +5,56 @@
              Title="{Binding Title}">
     <ContentPage.Content>
         <StackLayout>
-            <AbsoluteLayout VerticalOptions="FillAndExpand">
+           <AbsoluteLayout HeightRequest="600">
                 <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
-                           AbsoluteLayout.LayoutBounds="0, 0, AutoSize, AutoSize"
+                             AbsoluteLayout.LayoutBounds="0, 0.3, AutoSize, AutoSize"
+                             WidthRequest="425"
+                             BackgroundColor="Transparent"
+                             Source="maptc.jpg"
+                             />
+                <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
+                           AbsoluteLayout.LayoutBounds="0.5, 0.31, AutoSize, AutoSize"
                            Source="tc6.png"
+                           WidthRequest="235"
                            BackgroundColor="Transparent"
                            Clicked="ImageButton_Clicked"/>
                 <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
-                           AbsoluteLayout.LayoutBounds="0.86, 0.025, AutoSize, AutoSize"
-                           WidthRequest="55"
+                           AbsoluteLayout.LayoutBounds="0.69, 0.275, AutoSize, AutoSize"
+                           WidthRequest="27"
                            Source="tc4.png"
                            BackgroundColor="Transparent"
                            Clicked="ImageButton_Clicked_1"/>
+                
                 <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
-                           WidthRequest="180"
-                           AbsoluteLayout.LayoutBounds="0.3, 0.37, AutoSize, AutoSize"
+                           WidthRequest="120"
+                           AbsoluteLayout.LayoutBounds="0.38, 0.49, AutoSize, AutoSize"
                            BackgroundColor="Transparent"
                            Source="tc7.png"/>
-                <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
-                           WidthRequest="130"
+               <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
+                           WidthRequest="105"
                            BackgroundColor="Transparent"
-                           AbsoluteLayout.LayoutBounds="0.86, 0.37, AutoSize, AutoSize"
+                           AbsoluteLayout.LayoutBounds="0.73, 0.478, AutoSize, AutoSize"
                            Source="tc9.png"/>
                 <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
-                           WidthRequest="300"
+                           WidthRequest="155"
                            BackgroundColor="Transparent"
-                           AbsoluteLayout.LayoutBounds="0.3, 0.6, AutoSize, AutoSize"
+                           AbsoluteLayout.LayoutBounds="0.49, 0.58, AutoSize, AutoSize"
                            Source="tc5.png"/>
+                <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
+                           WidthRequest="30"
+                           BackgroundColor="Transparent"
+                           AbsoluteLayout.LayoutBounds="0.04, 0.43, AutoSize, AutoSize"
+                           Source="tc1.png"/>
+                <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
+                           WidthRequest="27"
+                           BackgroundColor="Transparent"
+                           AbsoluteLayout.LayoutBounds="0.042, 0.464, AutoSize, AutoSize"
+                           Source="tc2.png"/>
+                <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
+                           WidthRequest="51"
+                           BackgroundColor="Transparent"
+                           AbsoluteLayout.LayoutBounds="0.04, 0.515, AutoSize, AutoSize"
+                           Source="tc3.png"/>
             </AbsoluteLayout>
         </StackLayout>
     </ContentPage.Content>
